# membrane

./: .clang-format  .gitignore  README.md  meson.build
daemon/: main.c  membrane.h  meson.build  rwb.cpp  rwb.h
data/: zz-membrane.sh
eglplatform/: eglplatform_membrane.cpp  meson.build
gbm/: Makefile  membrane.c  meson.build
include/: log.h  membrane.h
kernel/: Kconfig  Makefile  membrane_drm.c  membrane_drv.c  membrane_drv.h  membrane_gem.c  membrane_rw.c
kernel/uapi/: membrane.h
